updated styles, added policies back in and added section for linking to store when ready

--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
         </div>
       </section>
 
+      <section id="get-extension">
+        <h2>Get Started</h2>
+        <div class="cta-container">
+          <p>Coming soon to the Chrome Web Store! Sign up to be notified when we launch.</p>
+          <div class="cta-buttons">
+            <button class="primary-button" onclick="alert('Coming soon!')">Get Extension</button>
+            <button class="secondary-button" onclick="window.location.href='#contact'">Get Notified</button>
+          </div>
+        </div>
+      </section>
+
       <section id="toxic-ingredients">
         <h2>Common Toxic Ingredients We Track</h2>
         <p>Our extension monitors for many potentially harmful ingredients. Here are some key examples:</p>
@@ -260,21 +271,23 @@
 
       <section id="policies">
         <h2>Policies</h2>
-        <div class="policy-section">
-          <h3>Subscription & Cancellation</h3>
-          <ul>
-            <li>Subscription remains active until the end of your current billing period</li>
-            <li>Full access to all features until the period ends</li>
-            <li>No auto-renewal after cancellation</li>
-            <li>No refunds for partial periods</li>
-          </ul>
-        </div>
-        <div class="policy-section">
-          <h3>Terms of Service</h3>
-          <p>
-            By using Toxin Filter, you agree to use the service as intended for identifying ingredients in grocery
-            products on Instacart. The extension is provided "as is" without warranty of any kind.
-          </p>
+        <div class="policies-grid">
+          <div class="policy-card">
+            <h3>Subscription & Cancellation</h3>
+            <ul>
+              <li>Subscription remains active until the end of your current billing period</li>
+              <li>Full access to all features until the period ends</li>
+              <li>No auto-renewal after cancellation</li>
+              <li>No refunds for partial periods</li>
+            </ul>
+          </div>
+          <div class="policy-card">
+            <h3>Terms of Service</h3>
+            <p>
+              By using Toxin Filter, you agree to use the service as intended for identifying ingredients in grocery
+              products on Instacart. The extension is provided "as is" without warranty of any kind.
+            </p>
+          </div>
         </div>
       </section>
 
