--- a/index.html
+++ b/index.html
@@ -289,6 +289,127 @@
             </p>
           </div>
         </div>
+
+        <button class="toggle-privacy-policy" onclick="togglePrivacyPolicy()">Privacy Policy</button>
+
+        <div class="privacy-policy">
+          <div class="section">
+            <h1>Privacy Policy</h1>
+            <p class="last-updated">Last Updated: January 2025</p>
+          </div>
+
+          <div class="section">
+            <h2>Introduction</h2>
+            <p>
+              The Toxin Filter Chrome extension ("we", "our", or "the extension") is committed to protecting your
+              privacy. This privacy policy explains how we collect, use, and safeguard your information when you use our
+              Chrome extension.
+            </p>
+          </div>
+
+          <div class="section">
+            <h2>Information We Collect</h2>
+            <h3>Product Information</h3>
+            <ul>
+              <li>Product ingredients and their composition</li>
+              <li>Product identifiers from Instacart</li>
+              <li>Product URLs and image URLs</li>
+              <li>Price information displayed on Instacart</li>
+            </ul>
+
+            <h3>User Account Information</h3>
+            <ul>
+              <li>Email address (for account creation and management)</li>
+              <li>Subscription status and history</li>
+              <li>Payment information (processed securely through Stripe)</li>
+            </ul>
+          </div>
+
+          <div class="section">
+            <h2>How We Use Your Information</h2>
+            <h3>Product Analysis</h3>
+            <ul>
+              <li>To analyze ingredients for potential health concerns</li>
+              <li>To provide visual feedback about ingredient safety</li>
+              <li>To maintain a database of product ingredients for faster future analysis</li>
+              <li>To improve the accuracy of our ingredient analysis system</li>
+            </ul>
+
+            <h3>Account Management</h3>
+            <ul>
+              <li>To manage your subscription status</li>
+              <li>To process payments through our payment processor, Stripe</li>
+              <li>To communicate important updates about your account or the service</li>
+            </ul>
+          </div>
+
+          <div class="section">
+            <h2>Data Storage and Security</h2>
+            <p>We use the following methods to store and protect your data:</p>
+            <ul>
+              <li>Secure database storage through Supabase for product and user data</li>
+              <li>Local browser caching for improved performance</li>
+              <li>Encrypted transmission of all data using HTTPS</li>
+              <li>Secure payment processing through Stripe</li>
+            </ul>
+          </div>
+
+          <div class="section">
+            <h2>Data Sharing</h2>
+            <p>We do not sell or rent your personal information to third parties. We share data only with:</p>
+            <ul>
+              <li>Stripe - for processing payments and managing subscriptions</li>
+              <li>Supabase - for secure database hosting</li>
+            </ul>
+          </div>
+
+          <div class="section">
+            <h2>Local Storage</h2>
+            <p>The extension uses local browser storage to:</p>
+            <ul>
+              <li>Cache product information for faster performance</li>
+              <li>Store user preferences and settings</li>
+              <li>Maintain authentication state</li>
+            </ul>
+          </div>
+
+          <div class="section">
+            <h2>Your Rights</h2>
+            <p>You have the right to:</p>
+            <ul>
+              <li>Access your personal information</li>
+              <li>Correct inaccurate information</li>
+              <li>Request deletion of your information</li>
+              <li>Export your data</li>
+              <li>Opt-out of data collection (note: this may limit functionality)</li>
+            </ul>
+          </div>
+
+          <div class="section">
+            <h2>Data Retention</h2>
+            <p>
+              We retain your information for as long as your account is active or as needed to provide services. If you
+              cancel your subscription, we will retain your data for a reasonable period to comply with legal
+              obligations and for backup purposes.
+            </p>
+          </div>
+
+          <div class="section">
+            <h2>Changes to This Policy</h2>
+            <p>
+              We may update this privacy policy from time to time. We will notify you of any changes by posting the new
+              policy on this page and updating the "Last Updated" date.
+            </p>
+          </div>
+
+          <div class="section">
+            <h2>Contact Us</h2>
+            <p>
+              If you have any questions about this privacy policy or our data practices, please contact us at
+              kryptoknightdev@gmail.com.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section id="contact">
@@ -324,6 +445,13 @@
     </footer>
 
     <script>
+      function togglePrivacyPolicy() {
+        const button = document.querySelector(".toggle-privacy-policy");
+        const content = document.querySelector(".privacy-policy");
+        button.classList.toggle("active");
+        content.classList.toggle("expanded");
+      }
+
       function toggleIngredientsList() {
         const modal = document.getElementById("ingredients-modal");
         modal.classList.toggle("active");
