updated the displayed lists

--- a/index.html
+++ b/index.html
@@ -104,42 +104,130 @@
                 <ul>
                   <li>
                     Aspartame
+                    <div class="ingredient-aliases">Also known as: E951, NutraSweet, Equal</div>
                     <ul class="effects-list">
                       <li>Headaches</li>
                       <li>Seizures</li>
                       <li>Depression and anxiety</li>
                     </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a
+                          href="https://www.who.int/news/item/14-07-2023-aspartame-hazard-and-risk-assessment-results-released"
+                          target="_blank"
+                        >
+                          WHO: Aspartame hazard and risk assessment (2023)
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.cancer.org/cancer/risk-prevention/chemicals/aspartame.html"
+                          target="_blank"
+                        >
+                          American Cancer Society: Aspartame and Cancer Risk (2023)
+                        </a>
+                      </li>
+                    </ul>
                   </li>
                   <li>
                     High Fructose Corn Syrup
+                    <div class="ingredient-aliases">Also known as: HFCS, Corn syrup high fructose, Isoglucose</div>
                     <ul class="effects-list">
                       <li>Increased risk of obesity</li>
                       <li>Insulin resistance</li>
                       <li>Potential metabolic syndrome</li>
+                      <li>Non-alcoholic fatty liver disease</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a href="https://europepmc.org/article/med/23181629" target="_blank">
+                          Global Public Health: High-fructose corn syrup and diabetes prevalence (2022)
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.frontiersin.org/journals/pharmacology/articles/10.3389/fphar.2021.783393/full"
+                          target="_blank"
+                        >
+                          Institute of Digestive Diseases: The Contribution of Dietary Fructose to NAFLD (2021)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                   <li>
                     Sodium Nitrite
+                    <div class="ingredient-aliases">Also known as: E250, Nitrous acid sodium salt</div>
                     <ul class="effects-list">
                       <li>Formation of carcinogenic nitrosamines</li>
-                      <li>Increased cancer risk</li>
+                      <li>Increased risk of colorectal cancer</li>
                       <li>Methemoglobinemia risk</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a
+                          href="https://academic.oup.com/eurpub/article/31/Supplement_3/ckab165.244/6406211"
+                          target="_blank"
+                        >
+                          European Journal of Public Health: Nitrites and nitrates from food additives and cancer risk
+                          (2021)
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.medicinenet.com/how_bad_is_sodium_nitrate_for_you/article.htm"
+                          target="_blank"
+                        >
+                          MedicineNet: How Bad Is Sodium Nitrate for You? (2024)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                   <li>
                     Potassium Bromate
+                    <div class="ingredient-aliases">Also known as: E924, Bromic acid, potassium salt</div>
                     <ul class="effects-list">
                       <li>Potential carcinogen</li>
                       <li>Kidney damage</li>
                       <li>Nervous system damage</li>
+                      <li>Thyroid tumors</li>
+                      <li>Gastrointestinal cancer</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1567851/" target="_blank">
+                          Environmental Health Perspectives: Toxicity and carcinogenicity of potassium bromate (1986)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://usrtk.org/chemicals/potassium-bromate/" target="_blank">
+                          U.S. Right to Know: Potassium bromate: 50 years of research shows serious health risks (2023)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                   <li>
                     Partially Hydrogenated Oils
+                    <div class="ingredient-aliases">Also known as: Trans fats, PHOs, Artificial trans fats</div>
                     <ul class="effects-list">
-                      <li>Increased LDL cholesterol</li>
-                      <li>Decreased HDL cholesterol</li>
-                      <li>Higher risk of heart disease</li>
+                      <li>Significantly increases risk of cardiovascular disease</li>
+                      <li>Raises harmful LDL cholesterol levels</li>
+                      <li>Lowers beneficial HDL cholesterol</li>
+                      <li>Promotes systemic inflammation</li>
+                      <li>Increases risk of type 2 diabetes</li>
+                      <li>Associated with stroke risk</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a href="https://pubmed.ncbi.nlm.nih.gov/35753860/" target="_blank">
+                          Nutrition, Metabolism and Cardiovascular Diseases: Trans fatty acids and cardiovascular
+                          disease risk (2022)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://pubmed.ncbi.nlm.nih.gov/31782488/" target="_blank">
+                          Current Developments in Nutrition: Mechanisms of Action of trans Fatty Acids (2023)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                 </ul>
@@ -148,67 +236,156 @@
                 <h3>Moderate Concern</h3>
                 <ul>
                   <li>
-                    Propylene Glycol
-                    <ul class="effects-list">
-                      <li>Skin irritation</li>
-                      <li>Allergic reactions</li>
-                      <li>Central nervous system effects</li>
-                    </ul>
-                  </li>
-                  <li>
                     Phosphoric Acid
+                    <div class="ingredient-aliases">Also known as: E338, Orthophosphoric acid</div>
                     <ul class="effects-list">
                       <li>Decreased bone density</li>
                       <li>Dental erosion</li>
                       <li>Kidney problems</li>
+                      <li>Increased risk of osteoporosis</li>
+                      <li>Skin and eye irritation</li>
+                      <li>Respiratory issues</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a
+                          href="https://www.healthline.com/health/food-nutrition/is-phosphoric-acid-bad-for-me"
+                          target="_blank"
+                        >
+                          Healthline: Is Phosphoric Acid Bad for Me? (2014)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://pubmed.ncbi.nlm.nih.gov/10513764/" target="_blank">
+                          Journal of Clinical Epidemiology: Consumption of soft drinks with phosphoric acid (1999)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                   <li>
                     Sodium Benzoate
+                    <div class="ingredient-aliases">Also known as: E211, Benzoic acid sodium salt</div>
                     <ul class="effects-list">
                       <li>Can form benzene when combined with vitamin C</li>
                       <li>Hyperactivity in children</li>
                       <li>Allergic reactions</li>
+                      <li>Potential DNA damage</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9003278/" target="_blank">
+                          Frontiers in Pharmacology: Sodium Benzoate—Harmfulness and Potential Use in Therapies (2020)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.healthline.com/nutrition/sodium-benzoate" target="_blank">
+                          Healthline: What Is Sodium Benzoate? Everything You Need to Know (2023)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                   <li>
                     Carrageenan
+                    <div class="ingredient-aliases">Also known as: E407, Irish moss extract</div>
                     <ul class="effects-list">
                       <li>Inflammation</li>
                       <li>Digestive problems</li>
                       <li>Potential carcinogenic effects</li>
+                      <li>Immune system suppression</li>
                     </ul>
-                  </li>
-                  <li>
-                    Monosodium Glutamate
-                    <ul class="effects-list">
-                      <li>Headaches</li>
-                      <li>Nausea</li>
-                      <li>Chest pain</li>
+                    <ul class="sources-list">
+                      <li>
+                        <a href="https://www.medicalnewstoday.com/articles/323117" target="_blank">
+                          Medical News Today: Carrageenan: Safety, risks, and uses (2018)
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.medicinenet.com/what_is_wrong_with_carrageenan/article.htm"
+                          target="_blank"
+                        >
+                          MedicineNet: Carrageenan: Uses, Safety, Side Effects, and More (2023)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                   <li>
                     BHT (Butylated hydroxytoluene)
+                    <div class="ingredient-aliases">Also known as: E321, Butylated hydroxytoluene</div>
                     <ul class="effects-list">
-                      <li>Potential liver effects</li>
+                      <li>Potential carcinogen</li>
+                      <li>Liver effects</li>
                       <li>Kidney effects</li>
                       <li>Behavioral effects</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a href="https://pubmed.ncbi.nlm.nih.gov/12396675/" target="_blank">
+                          International Journal of Toxicology: Final Report on the Safety Assessment of BHT (2002)
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.webmd.com/vitamins/ai/ingredientmono-1071/butylated-hydroxytoluene-bht"
+                          target="_blank"
+                        >
+                          WebMD: Butylated Hydroxytoluene (BHT) - Uses, Side Effects, and More (2021)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                   <li>
                     BHA (Butylated hydroxyanisole)
+                    <div class="ingredient-aliases">Also known as: E320, tert-butyl-4-hydroxyanisole</div>
                     <ul class="effects-list">
                       <li>Potential carcinogen</li>
                       <li>Endocrine disruption</li>
                       <li>Behavioral effects</li>
+                      <li>Thyroid system damage</li>
+                      <li>Neurotoxicity</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a
+                          href="https://www.healthvermont.gov/sites/default/files/documents/pdf/ENV_CDP_25013_16_5_BHA.pdf"
+                          target="_blank"
+                        >
+                          Vermont Department of Health: Butylated hydroxyanisole (BHA) (2021)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4462476/" target="_blank">
+                          Environmental Health Insights: Endocrine disrupting effects of BHA (2015)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                   <li>
                     Artificial Food Coloring
+                    <div class="ingredient-aliases">
+                      Also known as: Red 40, Yellow 5, Yellow 6, Blue 1, Red 3, Blue 2, Green 3
+                    </div>
                     <ul class="effects-list">
-                      <li>Hyperactivity in children</li>
-                      <li>Allergic reactions</li>
-                      <li>Behavioral changes</li>
+                      <li>Hyperactivity and attention problems in children</li>
+                      <li>Behavioral changes and irritability</li>
+                      <li>Allergic reactions and hypersensitivity</li>
+                      <li>Potential immune system effects</li>
+                      <li>Gastrointestinal disturbances</li>
+                      <li>Sleep disturbances in sensitive individuals</li>
+                    </ul>
+                    <ul class="sources-list">
+                      <li>
+                        <a href="https://pubmed.ncbi.nlm.nih.gov/38423749/" target="_blank">
+                          Archives of Disease in Childhood: Artificial food additives: hazardous to long-term health?
+                          (2024)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://pubmed.ncbi.nlm.nih.gov/38928929/" target="_blank">
+                          International Journal of Environmental Research: Synthetic Colors in Food: A Warning for
+                          Children's Health (2023)
+                        </a>
+                      </li>
                     </ul>
                   </li>
                 </ul>
