updated more terms

--- a/index.html
+++ b/index.html
@@ -464,6 +464,33 @@
               By using Toxin Filter, you agree to use the service as intended for identifying ingredients in grocery
               products on Instacart. The extension is provided "as is" without warranty of any kind.
             </p>
+            <ul>
+              <li>All content and functionality are owned by Toxin Filter</li>
+              <li>Users receive a limited license for personal use only</li>
+              <li>We may modify or discontinue features without notice</li>
+              <li>No liability for decisions made based on extension data</li>
+              <li>Users must comply with acceptable use policies</li>
+              <li>We may suspend accounts for terms violations</li>
+              <li>Users agree to our Privacy Policy and data collection</li>
+              <li>Maximum liability limited to subscription fees paid</li>
+              <li>No automated or programmatic access without permission</li>
+              <li>No unauthorized access to backend systems or data</li>
+              <li>Users grant permission to analyze shopping data</li>
+              <li>We implement reasonable security measures</li>
+            </ul>
+          </div>
+          <div class="policy-card">
+            <h3>Research & Data Disclaimers</h3>
+            <ul>
+              <li>Information is provided for educational purposes only</li>
+              <li>Not intended to diagnose, treat, cure, or prevent any disease</li>
+              <li>Ingredient classifications are based on available research which may evolve</li>
+              <li>Some ingredients may have mixed or conflicting research findings</li>
+              <li>Users should verify ingredients directly on product packaging</li>
+              <li>Consult healthcare professionals for medical advice</li>
+              <li>Individual reactions to ingredients may vary</li>
+              <li>The extension does not account for personal allergies or sensitivities</li>
+            </ul>
           </div>
         </div>
 
