name change and domain for cleancart

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Toxin Filter - Smart Grocery Shopping</title>
+    <title>Clean Cart - Smart Grocery Shopping</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <div class="logo">Toxin Filter</div>
+        <div class="logo">Clean Cart</div>
         <div class="nav-links">
           <a href="#features">Features</a>
           <a href="#about">About</a>
@@ -54,7 +54,7 @@
       </section>
 
       <section id="toxic-ingredients">
-        <h2>Common Toxic Ingredients We Track</h2>
+        <h2>Common Ingredients We Track</h2>
         <p>Our extension monitors for many potentially harmful ingredients. Here are some key examples:</p>
         <div class="ingredients-grid">
           <div class="ingredient-card">
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="view-all-container">
-          <button class="view-all-btn" onclick="toggleIngredientsList()">View All Toxic Ingredients</button>
+          <button class="view-all-btn" onclick="toggleIngredientsList()">View All Ingredients</button>
         </div>
       </section>
 
@@ -430,7 +430,7 @@
         <h2>About Us</h2>
         <div class="about-content">
           <p>
-            Toxin Filter is dedicated to helping you make informed decisions about the food you purchase. Our Chrome
+            Clean Cart is dedicated to helping you make informed decisions about the food you purchase. Our Chrome
             extension seamlessly integrates with Instacart to provide real-time ingredient analysis while you shop.
           </p>
           <div class="value-props">
@@ -461,11 +461,11 @@
           <div class="policy-card">
             <h3>Terms of Service</h3>
             <p>
-              By using Toxin Filter, you agree to use the service as intended for identifying ingredients in grocery
+              By using Clean Cart, you agree to use the service as intended for identifying ingredients in grocery
               products on Instacart. The extension is provided "as is" without warranty of any kind.
             </p>
             <ul>
-              <li>All content and functionality are owned by Toxin Filter</li>
+              <li>All content and functionality are owned by Clean Cart</li>
               <li>Users receive a limited license for personal use only</li>
               <li>We may modify or discontinue features without notice</li>
               <li>No liability for decisions made based on extension data</li>
@@ -505,9 +505,9 @@
           <div class="section">
             <h2>Introduction</h2>
             <p>
-              The Toxin Filter Chrome extension ("we", "our", or "the extension") is committed to protecting your
-              privacy. This privacy policy explains how we collect, use, and safeguard your information when you use our
-              Chrome extension.
+              The Clean Cart Chrome extension ("we", "our", or "the extension") is committed to protecting your privacy.
+              This privacy policy explains how we collect, use, and safeguard your information when you use our Chrome
+              extension.
             </p>
           </div>
 
@@ -645,7 +645,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 Toxin Filter. All rights reserved.</p>
+      <p>&copy; 2024 Clean Cart. All rights reserved.</p>
     </footer>
 
     <script>
